# Tic-tac

./: .gitignore  Ay_calculation_report.md  Ay_theoretical_results_129MeV.txt  CMakeLists.txt  FUNCTIONALITY.md  Makefile  README.md  analyze_Ay.py  build.sh  config.py  simple_Ay_analysis.py  sync_sources.py
CPP/: auxiliary.cpp  chp_aux.mod  disk_io_routines.h  idaho_chiral_potential.mod  make_permutation_matrix.cpp  make_permutation_matrix.h  make_swp_states.h  makefile  nijmegen.mod  solve_faddeev.h  twobody_pwd.mod
CPP/General_functions/: matrix_routines.cpp  matrix_routines.h
CPP/Input/: input_Ay_fixed.txt  input_Ay_test.txt  lab_energies_190MeV.txt
CPP/Output/: q_kinematics_Nq_50.txt  run_parameters.txt
Input/: input_Ay_correct.txt
doc/: ADVANCED_CONFIGURATION.md  OPERATION_MANUAL.md  PRINCIPLE_ALGORITHM.md  modify.md
doc/refpaper/: note.md
examples/: Ay_physics_background.md  compare_Ay_experiment.py  deuteron_proton_Ay.py  quick_Ay_test.py  run_examples.sh
src/: main.cpp
src/config/: run_organizer.cpp  run_organizer.h
src/core/faddeev_solver/: solve_faddeev.cpp  solve_faddeev.h
src/core/potential/: make_potential_matrix.cpp  make_potential_matrix.h
src/core/resolvent/: make_resolvent.cpp  make_resolvent.h
src/core/state_space/: make_permutation_matrix.h  make_pw_symm_states.cpp  make_pw_symm_states.h  make_swp_states.cpp  make_swp_states.h  make_wp_states.cpp  make_wp_states.h
src/interactions/: OPEP.h  chiral_Idaho_N3LO.h  chiral_LO_internal.h  chiral_N2LOopt.h  chiral_twobody.h  malfliet_tjon.h  nijmegen.h  potential_model.cpp  potential_model.h
src/io/: disk_io_routines.cpp  disk_io_routines.h
src/utils/: auxiliary.h  coupling_coefficients.cpp  coupling_coefficients.h  error_management.cpp  error_management.h  kinetic_conversion.h  legendre.h  matrix_routines.h  templates.h
